[workspace]
resolver = "2"
members = [
    "core/control-panel/api",
    "core/control-panel/impl",
    "core/station/api",
    "core/station/impl",
    "core/upgrader/api",
    "core/upgrader/impl",
    "libs/canfund",
    "libs/orbit-essentials",
    "libs/orbit-essentials-macros",
    "libs/orbit-essentials-macros-tests",
    "tests/integration",
    "tools/dfx-orbit",
]

[workspace.package]
authors = ["DFINITY Stiftung"]
edition = "2021"
repository = "https://github.com/dfinity/orbit"
homepage = "https://github.com/dfinity/orbit#readme"
license = "Apache-2.0"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.75"
deunicode = "1.4.4"
async-trait = "0.1"
base64 = "0.22.1"
byteorder = "1.5"
canbench-rs = "0.1.1"
candid = "0.10.3"
candid_parser = "0.1.3"
cap-std = "3.1.0"
ciborium = "0.2.2"
clap = { version = "4.5.7", features = ["derive"] }
dateparser = "0.2"
dfx-core = { git = "https://github.com/dfinity/sdk.git", tag = "0.22.0" }
flate2 = "1.0"
convert_case = "0.6"
futures = "0.3"
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4"
# The ic-agent matches the one sed by bthe 
ic-agent = { git = "https://github.com/dfinity/agent-rs.git", rev = "be929fd7967249c879f48f2f494cbfc5805a7d98" }
ic-asset = { git = "https://github.com/dfinity/sdk.git", rev = "6dd3f036eb5dfb1adb9d3709b286648d241313cc" }
ic-certification = { git = "https://github.com/dfinity/response-verification", rev = "da70db93832f88ecc556ae082612aedec47d3816" }
ic-certified-assets = { git = "https://github.com/dfinity/sdk.git", rev = "6dd3f036eb5dfb1adb9d3709b286648d241313cc" }
ic-http-certification = { git = "https://github.com/dfinity/response-verification", rev = "da70db93832f88ecc556ae082612aedec47d3816" }
ic-representation-independent-hash = { git = "https://github.com/dfinity/response-verification", rev = "da70db93832f88ecc556ae082612aedec47d3816" }
ic-cdk = "0.13.2"
ic-cdk-macros = "0.9"
ic-cdk-timers = "0.7.0"
ic-ledger-types = "0.10.0"
ic-stable-structures = "0.6.4"
ic-utils = { git = "https://github.com/dfinity/agent-rs.git", rev = "be929fd7967249c879f48f2f494cbfc5805a7d98" }
itertools = "0.13.0"
lazy_static = "1.4.0"
mockall = "0.12.1"
num-bigint = "0.4"
num-traits = "0.2"
pocket-ic = "4.0.0"
proc-macro2 = "1.0"
prometheus = "0.13.3"
quote = "1.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
reqwest = { version = "0.12", default-features = false }
rstest = "0.18.2"
serde = "1.0.188"
serde_bytes = "0.11"
serde_json = "1.0"
serde_cbor = "0.11.2"
sha2 = "0.10"
slog = "2.5.2"
slog-async = "2.4.0"
slog-term = "2.9.0"
strum = "0.26"
strum_macros = "0.26"
syn = { version = "2.0", features = ["extra-traits", "full"] }
tabled = "0.16"
tempfile = "3.10"
thiserror = "1.0.48"
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1.33.0" }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
wat = "1.0.52"
semver = "1.0.23"
