# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "bank"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/orbit-wallet#readme"
repository = "https://github.com/dfinity/orbit-wallet"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.9.10", features = ["parser"] }
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
ic-ledger-types = "0.8"
ic-stable-structures = "0.6.0"
ic-cdk-timers = "0.5"
serde = "1.0.188"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
ic-canister-core = { path = "../../libs/ic-canister-core", version = "0.1.0" }
ic-canister-macros = { path = "../../libs/ic-canister-macros", version = "0.1.0" }
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
async-trait = "0.1"
num-bigint = "0.4"
num-traits = "0.2"
byteorder = "1.5"

[dev-dependencies]
rstest = "0.18.2"
tokio = { version = "1.32.0", features = ["full"] }
