# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "control_panel"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/orbit-wallet#readme"
repository = "https://github.com/dfinity/orbit-wallet"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { version = "0.9.10", features = ["parser"] }
convert_case = "0.6.0"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.5"
ic-stable-structures = "0.6.0"
serde = "1.0.188"
thiserror = "1.0.48"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
ic-canister-core = { path = "../../libs/ic-canister-core", version = "0.1.0" }
ic-canister-macros = { path = "../../libs/ic-canister-macros", version = "0.1.0" }

[dev-dependencies]
rstest = "0.18.2"
tokio = { version = "1.33.0", features = ["full"] }
