# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "control_panel"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/orbit-wallet#readme"
repository = "https://github.com/dfinity/orbit-wallet"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true, features = ["parser"] }
getrandom = { workspace = true, features = ["custom"] }
ic-canister-core = { workspace = true }
ic-canister-macros = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
