[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
hex = { workspace = true }
ic-canister-core = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
lazy_static = { workspace = true }
# This is a temporary workaround for pocket-ic to use the latest version of ic-cdk that is
# already in master but not yet published to crates.io
pocket-ic = { git = "https://github.com/dfinity/ic.git", rev = "6397368" }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
control_panel_api = { path = "../control-panel/api" }
upgrader_api = { path = "../upgrader/api" }
wallet_api = { path = "../wallet/api" }
