[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
hex = { workspace = true }
ic-canister-core = { workspace = true }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
pocket-ic = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
control_panel_api = { path = "../control-panel/api" }
upgrader_api = { path = "../upgrader/api" }
wallet_api = { path = "../wallet/api" }
