# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "canfund"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
