# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "canfund"
description = "This library provides a simple interface to monitor and add cycles to canisters on the Internet Computer."
include = ["src", "Cargo.toml"]
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
async-trait = { workspace = true }
candid = { workspace = true }
futures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
num-bigint = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
