# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ic-canister-core"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
candid = "0.9.6"
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = "0.11"
ic-cdk-macros = "0.8"
ic-cdk-timers = "0.5"
ic-stable-structures = "0.5.6"
serde = "1.0.188"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
rand_chacha = "0.3.1"
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "1.0"
convert_case = "0.6"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
