# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "ic-canister-core"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]

[lib]
crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
candid = { workspace = true }
convert_case = { workspace = true }
getrandom = { workspace = true, features = ["custom"] }
ic-cdk = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
