
[package]
name = 'orbit-essentials-macros-tests'
include = ['src', 'Cargo.toml']
version = '0.0.1'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['rlib']
bench = false

[dependencies]
candid = { workspace = true }
serde = { workspace = true, features = ['derive'] }
serde_cbor = { workspace = true }
serde_bytes = { workspace = true }
orbit-essentials = { path = '../orbit-essentials', version = '0.1.0' }
