
[package]
name = 'orbit-essentials-macros'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.2'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
proc-macro = true
bench = false

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ['extra-traits', 'full'] }
