
[package]
name = 'orbit-essentials'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.0'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['cdylib', 'rlib']
bench = false

[dependencies]
candid = { workspace = true }
convert_case = { workspace = true }
getrandom = { workspace = true, features = ['custom'] }
ic-cdk = { workspace = true }
ic-stable-structures = { workspace = true }
orbit-essentials-macros = { path = '../orbit-essentials-macros', version = '0.0.2-alpha.0' }
prometheus = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
time = { workspace = true, features = ['formatting', 'parsing'] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ['serde', 'v4'] }

[dev-dependencies]
tokio = { workspace = true, features = ['full'] }
serde = { workspace = true, features = ['derive'] }
serde_cbor = { workspace = true }
