
[package]
name = 'orbit-essentials'
include = ['src', 'Cargo.toml']
version = '0.0.2-alpha.4'
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[lib]
crate-type = ['lib']
bench = false

[dependencies]
base64 = { workspace = true }
candid = { workspace = true }
convert_case = { workspace = true }
getrandom = { workspace = true, features = ['custom'] }
ic-asset-certification = { workspace = true }
ic-cdk = { workspace = true }
ic-certification = { workspace = true }
ic-http-certification = { workspace = true }
ic-stable-structures = { workspace = true }
orbit-essentials-macros = { path = '../orbit-essentials-macros', version = '0.0.2-alpha.3' }
prometheus = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
time = { workspace = true, features = ['formatting', 'parsing'] }
thiserror = { workspace = true }
uuid = { workspace = true, features = ['serde', 'v4'] }
ic-cdk-timers = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ['full'] }
serde = { workspace = true, features = ['derive'] }
serde_cbor = { workspace = true }
hex = { workspace = true }
