
[package]
name = 'integration-tests'
version = '0.0.1'
edition = '2021'

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
dfx-orbit = { path = "../../tools/dfx-orbit" }
hex = { workspace = true }
orbit-essentials = { path = '../../libs/orbit-essentials', version = '0.0.2-alpha.3' }
ic-cdk = { workspace = true }
ic-ledger-types = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { version = "0.12", default-features = false }
sha2 = { workspace = true }
serde = { workspace = true, features = ['derive'] }
tempfile = "3.10"
tokio.workspace = true
uuid = { workspace = true }
control-panel-api = { path = '../../core/control-panel/api', version = '0.0.2-alpha.3' }
upgrader-api = { path = '../../core/upgrader/api', version = '0.0.2-alpha.4' }
station-api = { path = '../../core/station/api', version = '0.0.2-alpha.4' }
wat = { workspace = true }
