
[package]
name = 'integration-tests'
version = '0.0.1'
edition = '2021'

[dependencies]
candid = { workspace = true }
candid_parser = { workspace = true }
dfx-orbit = { path = '../../tools/dfx-orbit', version = '0.6.0' }
flate2 = { workspace = true }
hex = { workspace = true }
orbit-essentials = { path = '../../libs/orbit-essentials', version = '0.0.2-alpha.6' }
ic-cdk = { workspace = true }
ic-certified-assets = { workspace = true }
ic-ledger-types = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
pocket-ic = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ['derive'] }
slog = { workspace = true }
slog-async = { workspace = true }
slog-term = { workspace = true }
tempfile = { workspace = true }
tokio.workspace = true
uuid = { workspace = true }
control-panel-api = { path = '../../core/control-panel/api', version = '0.0.2-alpha.4' }
upgrader-api = { path = '../../core/upgrader/api', version = '0.0.2-alpha.6' }
station-api = { path = '../../core/station/api', version = '0.0.2-alpha.7' }
wat = { workspace = true }
