[package]
name = "dfx-orbit"
version = "0.1.0"
description = "Command line tool for interacting with the Orbit digital asset manager on the ICP blockchain."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
candid.workspace = true
candid_parser.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
cap-std.workspace = true
dfx-core.workspace = true
ic-agent.workspace = true
ic-asset.workspace = true
ic-certified-assets.workspace = true
ic-utils.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
thiserror.workspace = true
tokio.workspace = true

orbit-station-api = { path = "../../core/station/api", package = "station-api" }
tempfile = "3.10"
walkdir = "2.5.0"

[lib]
doctest = false
