[package]
name = "dfx-orbit"
version = "0.3.0"
description = "Command line tool for interacting with the Orbit digital asset manager on the ICP blockchain."
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
candid.workspace = true
candid_parser.workspace = true
clap.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
cap-std.workspace = true
dateparser.workspace = true
dfx-core.workspace = true
hex.workspace = true
ic-agent.workspace = true
ic-asset.workspace = true
ic-certified-assets.workspace = true
ic-utils.workspace = true
itertools.workspace = true
sha2.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ['rt'] }

orbit-station-api = { path = "../../core/station/api", package = "station-api" }

[lib]
doctest = false
