
[package]
name = 'dfx-orbit'
version = '0.3.0'
description = 'Command line tool for interacting with the Orbit digital asset manager on the ICP blockchain.'
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
candid.workspace = true
candid_parser.workspace = true
clap.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
cap-std.workspace = true
dateparser.workspace = true
dfx-core.workspace = true
hex.workspace = true
ic-agent.workspace = true
ic-asset.workspace = true
ic-certified-assets.workspace = true
ic-utils.workspace = true
itertools.workspace = true
sha2.workspace = true
slog.workspace = true
slog-term.workspace = true
slog-async.workspace = true
tabled.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ['rt'] }
station-api = { path = '../../core/station/api', version = '0.0.2-alpha.5' }

[lib]
doctest = false
