# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "control_panel"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/orbit-wallet#readme"
repository = "https://github.com/dfinity/orbit-wallet"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-canister-core = { workspace = true }
ic-canister-macros = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
control_panel_api = { path = "../api" }
wallet_api = { path = "../../wallet/api" }

[dev-dependencies]
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
