[package]
name = "upgrader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
hex = { workspace = true }
ic-canister-macros = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
lazy_static = { workspace = true }
mockall = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
upgrader_api = { path = "../api" }

[dev-dependencies]
candid_parser = { workspace = true }
tokio = { workspace = true }
