# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
authors = ["DFINITY Stiftung"]
license = "Apache-2.0"
include = ["src", "Cargo.toml"]
homepage = "https://github.com/dfinity/orbit-wallet#readme"
repository = "https://github.com/dfinity/orbit-wallet"

[lib]
crate-type = ["cdylib"]
bench = false

[features]
canbench = ["canbench-rs"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
canbench-rs = { workspace = true, optional = true }
candid = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
ic-canister-core = { workspace = true }
ic-canister-macros = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-ledger-types = { workspace = true }
ic-stable-structures = { workspace = true }
ic-cdk-timers = { workspace = true }
lazy_static = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
wallet_api = { path = "../api" }
upgrader_api = { path = "../../upgrader/api" }

[dev-dependencies]
candid_parser = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true, features = ["full"] }
