# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "control-panel-api"
include = ["src", "Cargo.toml"]
version = "0.0.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
homepage.workspace = true

[dependencies]
candid = { workspace = true }
orbit-essentials = { workspace = true, version = "0.0.0" }
serde = { workspace = true }
serde_bytes = { workspace = true }
